src/global.css
/* COLORS */
:root {
  --red: #E85151;
  --red-shad: #B83535;
  --orange: #F2B091;
  --orange-shad: #F26E30;
  --yellow: #FFCD59;
  --yellow-shad: #F2AC49;
  --green: #9CB23E;
  --green-shad: #57661F;
  --dark-green: #3A4214;
  --blue-lt: #A1E6F7;
  --blue-dk: #458999;
  --off-white: #FFF8F5;
  --off-white-shad: #CCB5AA;
  --off-black: #1B2526;
}
/* FONTS */
@font-face {
  font-family: 'Comic Sands';
  src: url('/fonts/ComicSands-Bold.woff') format('woff');
}
@font-face {
  font-family: 'Futura PT';
  src: url('/fonts/FuturaPT-Book.woff') format('woff');
}
@font-face {
  font-family: 'Futura PT Bold';
  src: url('/fonts/FuturaPT-Bold.woff') format('woff');
}
h1 {
  font: bold 12rem/9.25rem 'Comic Sands';
  color: var(--off-black);
  margin: 1rem 0 0 0;
}
h2 {
  font: bold 4rem 'Comic Sands';
  color: var(--off-black);
  text-align: center;
}
h3 {
  font: 2.75rem 'Futura PT Bold';
  color: var(--off-black);
  text-align: center;
}
h4 {
  font: 2.5rem 'Futura PT';
  color: var(--off-black);
  text-align: center;
  margin: 1.5rem;
}
p {
  font: 1.875rem 'Futura PT';
  color: var(--off-black);
  text-align: center;
}

/* REM */
html {
  scroll-behavior: smooth;
  overflow-x: hidden;
  margin: 0;
  padding: 0;
  width: 100vw;
  background-color: var(--off-white);
}
@media only screen and (min-width: 0px) {
  html {
    font-size: 6px;
  }
}
@media only screen and (min-width: 240px) {
  html {
    font-size: 8px;
  }
}
@media only screen and (min-width: 720px) {
  html {
    font-size: 10px;
  }
}
@media only screen and (min-width: 960px) {
  html {
    font-size: 12px;
  }
}
@media only screen and (min-width: 1240px) {
  html {
    font-size: 14px;
  }
}

/* OTHER */
body {
  padding: 0;
  margin: 0;
}
button {
  font: 1.875rem 'Futura PT';
  color: var(--off-black);
  display: flex;
  align-items: center;
}
.site-container {
  display: flex;
  flex-direction: column;
  align-items: center;
  max-width: 100vw;
  overflow-x: hidden;
  position: relative;
}
.section {
  position: relative;
  padding: 8rem 10rem;
  width: 100vw;
}

/* hover animations */
.turn-red:hover {
  color: var(--red) !important;
}
.shrink {   
  transition: all .2s ease-in-out; 
}
.shrink:hover { 
  transform: scale(0.9); 
}

